[package]
name = "polybot_rust"
version = "0.1.0"
edition = "2021"
description = "High-frequency Polymarket trading bot in Rust — sub-ms latency"
authors = ["Foruse959"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (for CLOB auth signing)
ethers = { version = "2", features = ["rustls"] }
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
dotenvy = "0.15"

# Math
rust_decimal = "1"
anyhow = "1.0.102"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
