[package]
name = "polybot_rust"
version = "0.1.0"
edition = "2021"
description = "High-frequency Polymarket trading bot in Rust — sub-ms latency"
authors = ["Foruse959"]

[dependencies]
# ═══ OFFICIAL POLYMARKET SDK ═══
# https://github.com/Polymarket/rs-clob-client-v2
# Handles ALL CLOB auth, order signing (EIP-712), API calls, WebSocket, Gamma
# No manual HMAC/signing needed — SDK does it all for sig_type=3
polymarket_client_sdk_v2 = { git = "https://github.com/Polymarket/rs-clob-client-v2", features = ["clob", "gamma", "ws", "data"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
dotenvy = "0.15"

# Math
rust_decimal = "1"

# HTTP client (for direct CLOB/Gamma calls before SDK is fully wired)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
